--- a/sabrina-contact.html
+++ b/sabrina-contact.html
@@ -82,7 +82,7 @@
             <div class="card">
                 <div class="card-body">
                     <div class="d-flex justify-content-center align-items-center" style="margin-bottom: 20px;">
-                        <img src="celebrate.png" alt="" width="150px" height="100%">
+                        <img src="assets/celebrate.png" alt="" width="150px" height="100%">
                         <h1 style="font-weight: bold; text-align: right; margin-right: 30px;margin-top: 18px; color: darkolivegreen;">Say hi and let's work together!</h1>
                     </div>
                     <p style="text-align: center; margin: 30px;">Don't worry, I hate forms too! Just shoot me an email at nursabrinaosm@gmail.com or connect with me on LinkedIn and I'll be in touch ASAP! Can't wait to connect &#129321</p>
