--- a/sabrina.html
+++ b/sabrina.html
@@ -86,7 +86,7 @@
         <div class="container">
             <div class="card">
                 <div class="card-body" style="display: flex; flex-direction: column;">
-                    <img src="memoji.png" width="150px" height="100%">
+                    <img src="assets/memoji.png" width="150px" height="100%">
                     <p>Hello! My name is..</p>
                     <h1 style="font-size: 55px; margin-top: -21px;">Sabrina Osman</h1>
                     <p>I'm a front-end developer based in Singapore! Deeply passionate in creating beautiful and interactive websites. If you're looking for a highly motivated and creative front-end web developer, get in touch!</p>
