--- a/sabrina-projects.html
+++ b/sabrina-projects.html
@@ -37,6 +37,7 @@
             width: 900px;
             border-radius: 20px;
             padding: 20px 0px 20px 0px;
+            box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px; 
         }
 
         marquee {
