--- a/sabrina.html
+++ b/sabrina.html
@@ -22,6 +22,11 @@
                 padding: 10px;
             }
 
+            h1 {
+                font-size: 55px; 
+                margin-top: -21px;
+            }
+
             .nav-link {
                 font-size: 13px;
                 color: darkolivegreen
@@ -65,6 +70,19 @@
                 padding: 10px; 
                 margin-top: 30px;
             }
+
+            @media screen and (max-width: 450px) {
+                .card {
+                    width: 300px;
+                }
+                h1 {
+                    font-size: 35px;
+                }
+
+                p {
+                    font-size: 15px;
+                }
+        }
         </style>
     </head>
     <body>
@@ -88,7 +106,7 @@
                 <div class="card-body" style="display: flex; flex-direction: column;">
                     <img src="assets/memoji.png" width="150px" height="100%">
                     <p>Hello! My name is..</p>
-                    <h1 style="font-size: 55px; margin-top: -21px;">Sabrina Osman</h1>
+                    <h1>Sabrina Osman</h1>
                     <p>I'm a front-end developer based in Singapore! Deeply passionate in creating beautiful and interactive websites. If you're looking for a highly motivated and creative front-end web developer, get in touch!</p>
                     <a href="sabrina-contact.html" style="text-decoration: none; color: black; font-weight: bold;">
                         <div class="gradient-border">
